--- a/imports.css
+++ b/imports.css
@@ -1,6 +1,6 @@
 /* Salzburg AG Custom Fonts*/
 @font-face {
-	font-family: 'SBG AG - Frutiger Light';
+	font-family: 'Frutiger Light';
 	src:
 		url('https://sbg-sac.github.io/SBG_STD_F_LTStd-Light.woff2') format('woff2'),
 		url('https://sbg-sac.github.io/SBG_STD_F_LTStd-Light.woff') format('woff'),
